--- a/index.Rmd
+++ b/index.Rmd
@@ -78,13 +78,16 @@ library(thesisdown)
 ```
 
 ```{r chunkopts, include=FALSE}
-knitr::opts_chunk$set(echo = FALSE, 
-                      warning = FALSE, 
-                      message = FALSE, 
-                      fig.align = 'center', 
-                      dpi = 200,# fig.pos = 'H',
-                      dev.args = list(bg = "transparent"), 
-                      dev = 'png') #, dev='pdf'
+knitr::opts_chunk$set(
+  out.width = '95%',
+  echo = FALSE, 
+  warning = FALSE,
+  message = FALSE,
+  fig.align = 'center', 
+  dpi = 200,# fig.pos = 'H',
+  dev.args = list(bg = "transparent"), 
+  dev = 'png'
+  ) #, dev='pdf'
 # libraries
   library(pROC)
   #library(data.table)
